# routedock

./: .gitignore  CHANGELOG.md  LICENSE  MULTI_ASSET_SUPPORT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stress_test_results.json  tsconfig.base.json
contracts/agent-vault/: Cargo.toml
contracts/agent-vault/src/: lib.rs
contracts/agent-vault/test_snapshots/tests/: test_accept_admin_no_pending_admin_fails.1.json  test_accept_admin_wrong_address_fails.1.json  test_accumulated_spend_exceeding_cap_fails.1.json  test_accumulated_spend_within_cap_succeeds.1.json  test_allowlist_multiple_entries_all_accepted.1.json  test_daily_cap_boundary_at_limit_succeeds.1.json  test_daily_cap_boundary_exceeding_by_one_fails.1.json  test_daily_reset_across_boundaries.1.json  test_freeze_blocks_transfers.1.json  test_freeze_requires_admin.1.json  test_get_lifetime_spend_tracks_correctly.1.json  test_lifetime_cap_accumulates_across_days.1.json  test_lifetime_cap_boundary_at_limit_succeeds.1.json  test_lifetime_cap_boundary_exceeding_by_one_fails.1.json  test_lifetime_cap_enforced.1.json  test_lifetime_cap_zero_means_unlimited.1.json  test_lifetime_spend_not_incremented_on_rejection.1.json  test_old_admin_loses_access.1.json  test_overflow_protection_large_successive_payments.1.json  test_payment_authorized_daily_cumulative_accumulates.1.json  test_payment_authorized_event_emitted.1.json  test_payment_exceeding_daily_cap_rejected.1.json  test_payment_to_non_allowlisted_address_rejected.1.json  test_per_payee_cap_enforced_below_global_cap.1.json  test_view_functions.1.json  (+12 more)
(+99 files in other folders)
