[package]
name = "agent-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.10" }

[dev-dependencies]
soroban-sdk = { version = "22.0.10", features = ["testutils"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.test]
opt-level = 1
debug = false
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256
